--- a/style.css
+++ b/style.css
@@ -79,6 +79,12 @@ body {
 .container__descricao {
     padding: 2em;
 }
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 5em 0;
+}
 .dispositivos {
     text-align: center;
 }
